<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_account">Account Number not Valid!</string>
    <string name="error_phone">Phone Number not Valid!</string>
    <string name="pin_prompt">Enter Pin</string>
    <string name="submit">Submit</string>
    <string name="check_balance">Check Balance</string>
    <string name="app_name">BOI Balance Checker</string>
    <string name="account_id">Account ID</string>
    <string name="six_digit_code">Six Digit Pin</string>
    <string name="last4_phone">Last 4 digits of phone number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="continue_setup">continue</string>
    <string name="setup_login_info">Setup Login Info</string>
    <string name="select_date">Date of Birth</string>
    <string name="error_date">Date of Birth not Valid!</string>
    <string name="error_pin">Pin not Valid!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="remove_settings">Remove Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="date">Date</string>
    <string name="begin_setup">Begin Setup</string>
    <string name="title">Title</string>
    <string name="delete_account">Reset App</string>
    <string name="add_pin">Enable Pin</string>
    <string name="choose_pin">Choose Pin...</string>
    <string name="pin">Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="instructions">
        Place your fingertip on the Home button to verify your identity
    </string>
</resources>