<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_login_info" />

    <TextView
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date" />

    <Button
        android:id="@+id/progressSetup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/continue_setup"
        android:focusable="true" />
</LinearLayout>